--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "eslint-config-react-app": "^5.2.1",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-redux": "^7.2.0",
         "react-scripts": "3.4.0",
+        "redux": "^4.0.5",
         "tachyons": "^4.11.1",
         "tsutils": "^3.17.1"
     },
